static/css/custom.css
/*
 * Alerts
 */

.alert {
  border-radius: 0px;
}


/*
 * Cover page
 */

.content {
  padding-top: 10px;
}

.h-100 {
  min-height: 100vh;
  height: 100vh;
}

.vcenter-item{
    display: flex;
    align-items: center;
}

/*
 * Cover page
 */
h1.cover-heading {
  font-size: 4rem;
}

p.cover-text {
  font-size: 1.7rem;
}

.cover-card {
  background-color: rgba(245, 245, 245, 0.6);
  max-width: 30rem;
  padding-top: 30px;
  padding-left: 50px;
  padding-right: 50px;
  padding-bottom: 30px;
  border-radius: 15%;
}
.cover-card-block {
  opacity: 1
}


/*
 * forms
 */
.nolabel label {
  display: none;
}

ul.errorlist {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

/*
 * Typefaces
 */

.low-key {
  color: #777777;
  font-weight: 300;
}

.list-title {
  margin-top: 10px;
  margin-bottom: 20px;
}

/*
 * Profile
 */
.profile-image {
  width: 120px;
  clear:both;
  float:left;
}

.profile-text {
  overflow:hidden;
  padding-left:20px;
  padding-top:20px;
}

h3.profile-title {
  margin-bottom: 0px;
}

.profile-username {
  color: #777777;
  font-weight: 300;
  font-style: italic;
}


/*
 * Hyperlinks
 */
.content a {
  text-decoration: none;
  color: #0d6efd;
}
.content a:hover {
  text-decoration: underline;
  color: #0d6efd;
}


/*
 * Popup window
 */

.popup-container, .profile-popup-container{
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 999;
}

.profile-popup {
  border-radius: 25px;
  border: 2px solid white;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: white;
  padding: 20px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
  z-index: 1000;
  height: 300px;
  width: 300px;
}

.popup {
    border-radius: 25px;
    border: 2px solid white;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: white;
    padding: 20px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
    z-index: 1000;
    height: auto;
    width: 80%;
    max-width: 300px;
}

/* Issa's Popup container */
.popup-container {
  opacity: 0;
}

.popup-container.active {
    opacity: 1;
    animation: fadeIn 0.2s ease-out forwards;
}

@keyframes fadeIn {
  from {
      opacity: 0;
      transform: translate(0%, 10%) scale(1.2);
  }
  to {
      opacity: 1;
      transform: translate(0%, 0%) scale(1);
  }
}

.popup-container.active {
    opacity: 1;
    animation: fadeIn 0.2s ease-out forwards;
}

@keyframes fadeIn {
  from {
      opacity: 0;
      transform: translate(0%, 10%) scale(1.2);
  }
  to {
      opacity: 1;
      transform: translate(0%, 0%) scale(1);
  }
}
.close-btn {
    position: absolute;
    top: 10px;
    left: 10px;
    cursor: pointer;
}

/*
 * Team list style
 */

 .teams-list {
  list-style-type: none;
  padding: 0;
}

.team-item {
  margin-top: 20px;
  opacity: 0;
  transform: translateY(20px);
  transition: opacity 0.5s ease, transform 0.5s ease;
}

.team-link {
  display: block;
  text-decoration: none;
}

.team-box {
  border: 1px solid lightgray;
  border-radius: 5px;
  padding: 10px;
  background-color: white;
  transition: color 0.3s ease;
}

.team-link:hover .team-box:hover {
  color: navy;
}

.team-name {
  margin: 0;
  font-size: 18px;
  font-weight: bold;
  color: inherit;
}

.team-details {
  margin: 5px 0 0;
  font-size: 14px;
  color: inherit;
}
.team-text {
  font-family: 'IBM Plex Serif', serif;
}
.shading {
box-shadow: inset 0 5px 5px -5px rgba(0, 0, 0, 0.2), inset 5px 0 5px -5px rgba(0, 0, 0, 0.2);
}
.pfp {
font-size: 40px;
}

/* CSS design to team detail page */
body {
  overflow-x: hidden;
}
.rectangle {
  width: 150px;
  height: 700px;
  background-color: rgb(0, 102, 255);
  position: absolute;
  top: 0;
  left: 0;
  animation: diagonal-slide 0.8s cubic-bezier(0, 0.6, 0.3, 1.1) forwards;
  z-index: -1;
  opacity: 0%;
}
.rectangle:nth-child(1) {
  --index: 1;
  animation-delay: 0.3s;
}
.rectangle:nth-child(2) {
  --index: 2;
  animation-delay: 0.2s;
}
.rectangle:nth-child(3) {
  --index: 3;
  animation-delay: 0.1s;
}

@keyframes diagonal-slide {
  0% {
      transform: translateX(-200%) skew(-60deg);
      opacity: calc(5% * (var(--index)));
  }
  100% {
      transform: translateX(calc(48% - (150px * (var(--index) - 1)))) skew(-60deg);
      opacity: calc(5% * (var(--index)));
  }
}
/* Team detail buttons */
.team-detail-button {
  transition: transform 0.3s ease;
}
.team-detail-button:hover {
  transform: scale(0.90);
}


/*
Fade in transition
*/
.fade-in {
  opacity: 0;
  transform: translateY(-20px);
  transition: opacity 0.4s ease, transform 0.4s ease;
}

.fade-in.visible {
  opacity: 1;
  transform: translateY(0);

}

/*
 * Profile image style
 */
.large-image{
    height: 120px;
    width: 120px;
}

.medium-image{
    height: 70px;
    width: 70px;
}

.medium-small-image{
    height: 45px;
    width: 45px;
}

.small-image{
    height: 20px;
    width: 20px;
}

.invert_image{
    filter: invert(100%);
}


.custom-file-upload {
    border-radius: 5px;
    border: 1px solid #ccc;
    display: inline-block;
    padding: 6px 12px;
    cursor: pointer;
}

#popupContainer .input-file label {
    cursor: pointer;
}

#popupContainer .input-file input[type="file"] {
    opacity: 0;
    width: 0.1px;
    height: 0.1px;
    position: absolute;
}

/*
Fade in transition
*/
.fade-in {
  opacity: 0;
  transform: translateY(-20px);
  transition: opacity 0.4s ease, transform 0.4s ease;
}

.fade-in.visible {
  opacity: 1;
  transform: translateY(0);
}

.avatar-selected {
    border: 4px solid #1463f3;
}

/*  
Default mode 
*/
.default-mode .sidebar {
  background-color: rgb(239, 239, 239);
}

/*
Dark mode  
*/
.dark-mode {
  background-color: rgb(211,211,211);
  color: #fff;
}
.dark-mode .dropdown-custom-theme  {
  background-color: rgb(211,211,211) ;
  color: rgb(100,100,100) !important;
}

.dark-mode .sidebar {
  background-color: rgb(211,211,211) ;
}

.dark-mode .a {
  background: rgb(100,100,100);
}

.dark-mode .profile-popup {
  border: transparent;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: rgb(211,211,211);
  padding: 20px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
  z-index: 1000;
  height: 300px;
  width: 300px;
}

.dark-mode .popup {
    border: transparent;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgb(211,211,211);
    padding: 20px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
    z-index: 1000;
    height: auto;
    width: 80%;
    max-width: 300px;
}

/*
Orange mode
*/
.orange-mode {
  background-color: #FFD7BA;
  color: #5A2C04;
}

.orange-mode .sidebar {
  background-color: #ffc99f;
  color: #FFFFFF;
}
.orange-mode a {
  color: #000000;
}

.orange-mode .dropdown-custom-theme {
  background-color: #ffffff;
  color: #5A2C04;
}

/*
Forest mode
*/
.forest-mode {
  background-color: #A3C1AD;
  color: #1E3D22;
}
.forest-mode .dropdown-custom-theme {
  background-color: #507D60;
  color: #c7cec8;
}

.forest-mode .sidebar {
  background-color: #507D60;
  color: #1E3D22;
}

.forest-mode a {
  color: #ffffff;
}

.forest-mode a .btn {
  background-color: red ;
}

/*
Pink mode
*/
.pink-mode {
  background-color: #FDE2E4;
  color: #882D60;
}

.pink-mode .sidebar {
  background-color: #F4C2C2;
  color: #882D60;
}

.pink-mode a {
  color: #9E5062;
}

